--- a/hopital/src/main/resources/application.properties
+++ b/hopital/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # Data REST urlase de B
 spring.data.rest.basePath= /api
+
+server.port=8888
